[gd_scene load_steps=12 format=3 uid="uid://b2krvs07x6giu"]

[ext_resource type="Script" uid="uid://cprheg6pp5ehj" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://d22p8lvb6gxxb" path="res://assets/2D Pixel Dungeon Asset Pack/Character_animation/priests_idle/priest1/v1/priest1_v1_1.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cwgm3oan2okmt" path="res://assets/2D Pixel Dungeon Asset Pack/Character_animation/priests_idle/priest1/v1/priest1_v1_2.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://bhsieauchsgyi" path="res://assets/2D Pixel Dungeon Asset Pack/Character_animation/priests_idle/priest1/v1/priest1_v1_3.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://chlvya6n0ynuu" path="res://assets/2D Pixel Dungeon Asset Pack/Character_animation/priests_idle/priest1/v1/priest1_v1_4.png" id="5_smehm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qlg0r"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ej7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["persist", "player"]]
z_index = 5
collision_mask = 29
script = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_qlg0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f1ej7")
animation = &"idle"
frame = 3
frame_progress = 0.71601397

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
